# machine-learning-zoomcamp

./: README.md  car_homework.ipynb  homework_3.ipynb  homework_4.ipynb
capstone_two/: Dockerfile  README.md  notebook.ipynb  predict.py  pyproject.toml  train.py
homeworks/: README.md  homework_1.ipynb  homework_2.ipynb  homework_3.ipynb  homework_4.ipynb  homework_6.ipynb
midterm_project/: Dockerfile  README.md  notebook.ipynb  predict.py  pyproject.toml  train.py
